Fix bar spacing issue.

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -13,6 +13,15 @@
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 @mixin light-boxshadow{
 	-moz-box-shadow: 0 0 0px $nav-color;
 	-webkit-box-shadow: 0 0 0px $nav-color;
